@@ -4,14 +4,14 @@ ServerSignature Off
 
 
 # Enable SSL secured authenticated access via WebDAV for users with valid certificates
-# Default port: 443
+# Default port: 2880
 
 Include conf.d/bes-webdav/secured.include
 
 
 # Enable anonymous WebDAV access
 # Deafult port: 2880
-# For security reasons, please not opent it to the whole world
+# For security reasons, please don't make it world-readable
 
 #Include conf.d/bes-webdav/anonymous.include
 
