@@ -59,6 +59,7 @@ STORM_DEFAULT_ROOT="/besfs"
 STORM_FE_BE_XMLRPC_HOST=$STORM_BACKEND_HOST
 STORM_FRONTEND_HOST_LIST=$STORM_BACKEND_HOST
 STORM_FRONTEND_PUBLIC_HOST=$STORM_BACKEND_HOST
+STORM_FRONTEND_PORT=8444
 
 STORM_GRIDFTP_POOL_LIST=${STORM_BACKEND_HOST}
 STORM_GRIDHTTP_POOL_LIST=${STORM_BACKEND_HOST}
